[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Klim <klimrus61@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
